# rapid-gambit

./: .gitmodules  CMakeLists.txt  COPYING.GPL3  README.md  buildconfig.scm.in  buildline.sh  case-lambda.scm  config.scm.in  entrypoint.scm.in  gen.scm  hello.scm  rapid-compiler-gambit.scm  rapid-gambit-interp.scm  rapid-gambit-main.scm
cmake/: gen-core-scm-chibi-scheme.cmake  gen-core-scm.cmake  gen-version-scm.cmake
doc/: status.md
lib/rapid-gambit/: buildconfig.sld  currentstates.sld
misc/: updatetrack.scm
misc/impltrack/: known-bad.scm  known-good.scm
r7/: README  README.md  _override.scm  base.scm  char.scm  eval.scm  process-context.scm  write.scm
rt/: README.md  case-lambda.scm  record-GPL3.scm  states.scm  values-utils.scm
src/: README.md  entrypoint.scm.in  rapid-gambit-main.scm
tests/: trivial.scm
